--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_masked_text2: ^0.9.1
   flutter_portal: ^1.1.4
   flutter_secure_storage: ^9.0.0
+  flutter_side_menu: ^0.4.0
   fluttertoast: ^8.2.2
   go_router: ^12.0.0
   google_fonts: ^6.1.0
