--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  auto_size_text: ^3.0.0
   dart_jsonwebtoken: ^2.12.0
+  email_validator: ^2.1.17
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -36,3 +38,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
