--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.2.2
   supabase_flutter: ^1.10.23
+  timelines: ^0.1.0
   url_strategy: ^0.2.0
   uuid: ^4.1.0
 
