--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.4
   path: ^1.8.3
+  percent_indicator: ^4.2.3
   pluto_grid: ^7.0.2
   provider: ^6.0.5
   shared_preferences: ^2.2.2
