--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.0
   image_picker: ^1.0.4
+  model_viewer_plus: ^1.7.0
   path: ^1.8.3
   percent_indicator: ^4.2.3
   pluto_grid: ^7.0.2
@@ -43,3 +44,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/3d_models/
