--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   auto_size_text: ^3.0.0
   dart_jsonwebtoken: ^2.12.0
+  dropdown_button2: ^2.3.9
   email_validator: ^2.1.17
   flutter:
     sdk: flutter
