--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   flutter_side_menu: ^0.4.0
   fluttertoast: ^8.2.2
+  font_awesome_flutter: ^10.6.0
   go_router: ^12.0.0
   google_fonts: ^6.1.0
   http: ^1.1.0
