--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.0
   image_picker: ^1.0.4
+  intl: ^0.18.0
   path: ^1.8.3
   percent_indicator: ^4.2.3
   pluto_grid: ^7.0.2
