--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dart_jsonwebtoken: ^2.12.0
   dropdown_button2: ^2.3.9
   email_validator: ^2.1.17
+  file_picker: ^6.1.1
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -27,6 +28,7 @@ dependencies:
   image_picker: ^1.0.4
   intl: ^0.18.0
   path: ^1.8.3
+  pdfx: ^2.5.0
   percent_indicator: ^4.2.3
   pluto_grid: ^7.0.2
   provider: ^6.0.5
