--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
-    "deploymentEnabled": false
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
   }
