--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^1.0.4
   intl: ^0.18.0
   path: ^1.8.3
+  pdf: ^3.10.6
   pdfx: ^2.5.0
   percent_indicator: ^4.2.3
   pluto_grid: ^7.0.2
