--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dart_jsonwebtoken: ^2.12.0
   dropdown_button2: ^2.3.9
   email_validator: ^2.1.17
+  excel: ^3.0.0
   file_picker: ^6.1.1
   flutter:
     sdk: flutter
