--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  async: ^2.11.0
   auto_size_text: ^3.0.0
   dart_jsonwebtoken: ^2.12.0
   dropdown_button2: ^2.3.9
