--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.4
   intl: ^0.18.0
+  mask_text_input_formatter: ^2.7.0
   path: ^1.8.3
   pdf: ^3.10.6
   pdfx: ^2.5.0
