--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   random_password_generator: ^0.2.1
   shared_preferences: ^2.2.2
+  signature: ^5.4.1
   supabase_flutter: ^1.10.23
   timelines: ^0.1.0
   url_strategy: ^0.2.0
