--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   async: ^2.11.0
   auto_size_text: ^3.0.0
   dart_jsonwebtoken: ^2.12.0
+  date_format: ^2.0.7
   dropdown_button2: ^2.3.9
   email_validator: ^2.1.17
   excel: ^3.0.0
