--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.6.19
   flutter_masked_text2: ^0.9.1
   flutter_portal: ^1.1.4
   flutter_secure_storage: ^9.0.0
